--- a/mystyle.css
+++ b/mystyle.css
@@ -7,17 +7,18 @@
   }
   h1 {
   font-family: Verdana, sans-serif;
-  font-size: 35px;
+  font-size: 23px;
   color: Black;
   }
   .btn-group .button {
+    position: relative; left: 150px;
     background-color: lightyellow;
-    border: 1px solid Black;
+    border: 2px solid Black;
     color: black;
     padding: 4px 12px;
     text-align: center;
     font-family: Verdana, sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     cursor: pointer;
     float: left;
   }
@@ -34,15 +35,29 @@
   .btn-group .button:hover {
     background-color: lightblue;
   }
-  .rectangle {
+  .rectangle1 {
     position: absolute;
-    top: 100px; /* Adjust the 'top' value to set the vertical position */
+    top: 1px; /* Adjust the 'top' value to set the vertical position */
+    left: 10px; /* Adjust the 'left' value to set the horizontal position */
+    width: 1240px;
+    height: 140px;
+    background-color: white;
+    border: 1px solid #04b8c5;
+    padding: 10px;
+  }
+  .rectangle2 {
+    position: absolute;
+    top: 164px; /* Adjust the 'top' value to set the vertical position */
     left: 900px; /* Adjust the 'left' value to set the horizontal position */
     width: 350px;
-    height: 500px;
+    height: 480px;
     background-color: white;
-    border: 2px solid #ccc;
+    border: 1px solid #bd7303;
     padding: 10px;
+  }
+  .p2 {
+    text-align: justify;
+    text-justify: inter-word;
   }
 
   /* Style the paragraph inside the box */
