--- a/mystyle.css
+++ b/mystyle.css
@@ -10,15 +10,13 @@
   font-size: 23px;
   color: Black;
   }
-  .btn-group .button {
-    position: relative; left: 150px;
-    background-color: lightyellow;
-    border: 2px solid Black;
+  .btn-group{
+    position: relative; left: 300px;
     color: black;
-    padding: 4px 12px;
+    padding: 20px 40px;
     text-align: center;
     font-family: Verdana, sans-serif;
-    font-size: 12px;
+    font-size: 15px;
     cursor: pointer;
     float: left;
   }
@@ -28,13 +26,10 @@
   clear: both;
   display: table;
 }
-  .btn-group .button:not(:last-child) {
-    border-right: none; /* Prevent double borders */
-  }
-  
-  .btn-group .button:hover {
+.btn-group .button:hover {
     background-color: lightblue;
   }
+
   .rectangle1 {
     position: absolute;
     top: 1px; /* Adjust the 'top' value to set the vertical position */
